ingress-demo/webapps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp3
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
      - name: webapp3
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp4
  template:
    metadata:
      labels:
        app: webapp4
    spec:
      containers:
      - name: webapp4
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp5
  template:
    metadata:
      labels:
        app: webapp5
    spec:
      containers:
      - name: webapp5
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp6
  template:
    metadata:
      labels:
        app: webapp6
    spec:
      containers:
      - name: webapp6
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  ports:
  - port: 80
  selector:
    app: webapp1
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  ports:
  - port: 80
  selector:
    app: webapp2
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-svc
  labels:
    app: webapp3
spec:
  ports:
  - port: 80
  selector:
    app: webapp3
---
apiVersion: v1
kind: Service
metadata:
  name: webapp4-svc
  labels:
    app: webapp4
spec:
  ports:
  - port: 80
  selector:
    app: webapp4
---
apiVersion: v1
kind: Service
metadata:
  name: webapp5-svc
  labels:
    app: webapp5
spec:
  ports:
  - port: 80
  selector:
    app: webapp5
---
apiVersion: v1
kind: Service
metadata:
  name: webapp6-svc
  labels:
    app: webapp6
spec:
  ports:
  - port: 80
  selector:
    app: webapp6
