ingress-demo/ingress-multiple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-routes
spec:
  ingressClassName: nginx
  rules:
  - host: "latimer.susealliances.com"
    http:
      paths:
      - path: /webapp1
        pathType: Prefix
        backend:
          service:
            name: webapp1-svc
            port: 
              number: 80
      - path: /webapp2
        pathType: Prefix
        backend:
          service:
            name: webapp2-svc
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp3-svc
            port: 
              number: 80
